# TraceLoom

./: .gitignore  AGENTS.md  Makefile  README.md  build.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
doc/: architecture.md  building.md  data-model.md  frontend.md  future-plan.md  ir-design.md  parsers.md  task.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  workspace_file.rs
src-tauri/src/db/: commands.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/ir/: content.rs  edge.rs  message.rs  mod.rs  node.rs  trajectory.rs
src-tauri/src/parser/: claude.rs  codex.rs  common.rs  detector.rs  mod.rs  openclaw.rs
src/components/: AnnotationManager.svelte  BookmarkPanel.svelte  BricksRenderer.svelte  DotsRenderer.svelte  NodeDetail.svelte  WorkspaceToolbar.svelte
src/lib/: api.ts  blockPreview.ts  colors.ts  cytoscape-dagre.d.ts  order.ts  prism-json.d.ts  workspace.ts
src/types/: ir.ts  workspace.ts
test/samples/claude/: 7a1b341e-8378-460e-8592-3402c5cddb2c.jsonl  a2141fcf-b65b-4e01-9737-eeb8cef5f36a.jsonl  a5804c2a-fb5d-4ca5-8792-24fd85faac91.jsonl  agent-a87675e527686c483.jsonl  basic.jsonl
test/samples/codex/: basic.jsonl  rollout-2026-02-26T11-03-51-019c97e7-1a4b-7e20-91f4-06e2b3aa67cf.jsonl  rollout-2026-04-20T14-13-03-019da985-5e74-7891-84b1-95010b3f069f.jsonl  rollout-2026-04-21T10-14-25-019dadd1-40ee-7202-bef0-61941a619cd6.jsonl
test/samples/openclaw/: 1c95cffd-96a0-4477-8664-482fbd58911f.jsonl  257a2a09-7f86-47de-9752-31a617cc4f11.jsonl  3d4beed5-33e8-4298-81a1-e92da20053fa.jsonl  basic.jsonl
